Revert "CI remove msbuild@1 task"
This reverts commit c7484730cc49ef3998c7762de7e7ba414063c755.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -114,6 +114,14 @@ steps:
   condition: eq( variables.toolchain, 'vs' )
   displayName: 'Copying store key'
 
+- task: MSBuild@1
+  inputs:
+    solution: $(Agent.BuildDirectory)/$(netHackPath)/sys/windows/vs/NetHack.sln
+    platform: Win32
+    configuration: Debug
+  condition: eq( variables.toolchain, 'vs' )
+  displayName: 'Visual Studio Build'
+
 - bash: |
     export ADD_LUA=Y
     export WANT_LUAC=N
