more Windows CI testing

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -114,7 +114,7 @@ steps:
   condition: eq( variables.toolchain, 'vs' )
   displayName: 'Copying store key'
 
-- task: MSBuild@1
+- task: VSBuild@1
   inputs:
     solution: $(Agent.BuildDirectory)/$(netHackPath)/sys/windows/vs/NetHack.sln
     platform: Win32
