aim for successful build even without using hints file

--- a/sys/unix/Makefile.src
+++ b/sys/unix/Makefile.src
@@ -188,6 +188,8 @@ SYSOBJ = $(TARGETPFX)ioctl.o $(TARGETPFX)unixmain.o $(TARGETPFX)unixtty.o \
 #CFLAGS = -O -I../include
 #LFLAGS =
 
+CFLAGS ?= -I../include
+
 AR = ar
 ARFLAGS = rcs
 
